--- a/data/literature/Gustafsson et al/productivity.Rmd
+++ b/data/literature/Gustafsson et al/productivity.Rmd
@@ -11,7 +11,7 @@ library(chemhelper)
 ```
 
 ```{r}
-traits <- read_csv(here("Gustafsson et al", "CWM_traits.csv"), na = "nd")
+traits <- read_csv(here("data", "literature", "Gustafsson et al", "CWM_traits.csv"), na = "nd")
 traits <- traits[ , 1:13]
 #traits <- traits %>% filter(lnPrimprod > 1 & lnPrimprod < 5)
 traits <- traits %>% na.omit()
