--- a/data/literature/Muir et al./Muir PLSR.Rmd
+++ b/data/literature/Muir et al./Muir PLSR.Rmd
@@ -9,85 +9,68 @@ library(here)
 library(ropls)
 library(chemhelper)
 library(glue)
-library(raster)
+library(colorspace)
 ```
 
 # Read in Data
 
-Physiological data:
 ```{r}
-tomato.raw <- read_csv(here::here("data", "literature", "Muir et al.", "data.csv"))
-tomato <-
-  tomato.raw %>%
-  dplyr::select(-X1, -PC2, -PC1)
-tomato
+tomato <- read_rds(here("data", "literature", "Muir et al.", "tomatoes.rds"))
+
+#remove S.juglandifolium
+tomato.filtered <-
+  tomato %>% 
+  filter(Spe != "jug")
 ```
-
-Species abbreviations and lat long:
-
 ```{r}
-location <- read_csv(here::here("data", "literature", "Muir et al.", "TableS1.csv"))
-```
-
-Join the two
-
-```{r}
-tomato.1 <- 
-  left_join(tomato, location %>% dplyr::select(Spe, Latitude, Longitude, Taxon)) %>%
-  filter(!is.na(Latitude))
-tomato.1
-```
-
-# Get climate data
-
-```{r}
-r <- getData("worldclim",var="bio",res=5)
-r <- r[[c(1,12)]]
-names(r) <- c("temp","precip")
-
-coords <- data.frame(x = tomato.1$Longitude, y = tomato.1$Latitude)
-
-points <- SpatialPoints(coords, proj4string = r@crs)
-weather <- extract(r, points) %>% 
-  as_tibble()
-
-tomato.2 <- tomato.1 %>%
-  add_column(temp = weather$temp, precip = weather$precip)
+tomato %>% group_by(Spe) %>% count()
 ```
 
 
-```{r}
-write_rds(tomato.2, here::here("data", "literature", "Muir et al.", "tomatoes.rds"))
-```
-
-# Fit PCA
+# Fit PCA with S. juglandifolium
 
 ```{r}
-tom.pca <- opls(tomato.2 %>% dplyr::select(lma.leaflet:Rdark), plotL = FALSE)
+tom.pca <- opls(tomato %>% dplyr::select(lma.leaflet:Rdark), plotL = FALSE)
 tom.pca.data <- get_plotdata(tom.pca)
-
 ggplot(tom.pca.data$scores, aes(x = p1, y = p2)) +
-  geom_point(aes(color = tomato.2$precip)) +
-  scale_color_viridis_c(option = "A", direction = -1) +
-  labs(x = glue("P1 ({tom.pca.data$var_explained[1,1] * 100}%)"),
-       y = glue("P2 ({tom.pca.data$var_explained[2,1] * 100}%)"))
+  geom_point(aes(fill = tomato$precip), shape = 21, size = 2) +
+  scale_color_continuous_sequential("Blue-Yellow", aesthetics = "fill",
+                                    name = "Precipitation") +
+  labs(x = glue("P1 ({tom.pca.data$axis_stats[1,1] * 100}%)"),
+       y = glue("P2 ({tom.pca.data$axis_stats[2,1] * 100}%)")) +
+  theme_bw()
 ```
 ```{r}
 get_loadings(tom.pca) %>% 
   arrange(desc(abs(p2)))
 ```
 
+# PCA without S. juglandifolium
+```{r}
+tom.pca2 <- opls(tomato.filtered %>% dplyr::select(lma.leaflet:Rdark), plotL = FALSE)
+tom.pca2.data <- get_plotdata(tom.pca2)
+ggplot(tom.pca2.data$scores, aes(x = p1, y = p2)) +
+  geom_point(aes(fill = tomato.filtered$precip), shape = 21, size = 2) +
+  scale_color_continuous_sequential("Blue-Yellow", aesthetics = "fill",
+                                    name = "Precipitation") +
+  labs(x = glue("P1 ({tom.pca2.data$axis_stats[1,1] * 100}%)"),
+       y = glue("P2 ({tom.pca2.data$axis_stats[2,1] * 100}%)")) +
+  theme_bw()
+```
+
+# PCR
+
 # Fit PLSR
 
 ```{r}
 tom.plsr <- 
-  opls(tomato.2 %>% dplyr::select(lma.leaflet:Rdark), tomato.2$precip)
+  opls(tomato %>% dplyr::select(lma.leaflet:Rdark), tomato$precip)
 # single component model
 ```
 ```{r}
 #plot OPLS for the sake of visualization
 tom.plsr <- 
-  opls(tomato.2 %>% dplyr::select(lma.leaflet:Rdark), tomato.2$precip, 
+  opls(tomato %>% dplyr::select(lma.leaflet:Rdark), tomato$precip, 
        plotL = FALSE, permI = 500, predI = 1, orthoI = NA)
 
 plot_opls(tom.plsr)
