--- a/R/2-analyze-simulated-data.Rmd
+++ b/R/2-analyze-simulated-data.Rmd
@@ -10,9 +10,9 @@ output:
 
 
 - ~~output PCAs and PLSs as .rds~~
-- implement PCA regression on all scenarios, output PCR models.
-- deprecate red herring scenario
-- Add permutation to pls to get p-values.?
+- ~~implement PCA regression on all scenarios, output PCR models.~~
+- ~~deprecate red herring scenario~~
+- ~~Add permutation to pls to get p-values.~~
 - move analysis of results to other notebook?
 
 # Goal
@@ -69,10 +69,10 @@ For each scenario, run PCA and PLS-DA on all datasets.  Record errors, and calcu
 ### Null PCAs
 
 ```{r}
-# map the pca function to all datasets
-null.pcas.try <-
-  null %>% 
-  map(~safe_opls(select(., -group)))
+# # map the pca function to all datasets
+# null.pcas.try <-
+#   null %>% 
+#   map(~safe_opls(select(., -group)))
 
 #try with my PCR function instead
 null.pcr.try <- 
@@ -80,8 +80,8 @@ null.pcr.try <-
   map(~safe_pcr(-group, group, data = .))
 
 # Get just the successful models
-null.pcas <-
-  null.pcas.try %>%
+null.pcr <-
+  null.pcr.try %>%
   map("result") %>% #get only results
   discard(is.null) #get rid of any with NULL results (and therefore an error)
 ```
@@ -89,12 +89,17 @@ null.pcas <-
 Any errors?
 
 ```{r}
-length(null.pcas.try) - length(null.pcas)
+length(null.pcr.try) - length(null.pcr)
+null.pcr.try %>% 
+  map("error") %>%
+  unique()
 ```
+6 failed because of non-convergence.
+
 Save em!
 
 ```{r}
-write_rds(null.pcas, here("data", "models", "null-pca.rds"))
+write_rds(null.pcr, here("data", "models", "null-pcr.rds"))
 ```
 
 ### Null PLSs
@@ -126,6 +131,7 @@ null.pls.try %>%
 ```
 
 They all failed because the first predictive component already wasn't significant.
+
 ```{r}
 write_rds(null.pls, here("data", "models", "null-pls.rds"))
 ```
@@ -136,12 +142,12 @@ write_rds(null.pls, here("data", "models", "null-pls.rds"))
 
 ```{r}
 # map the pca function to all datasets
-control.pcas.try <-
+control.pcr.try <-
   map(control,
-      ~safe_opls(select(., -group)))
+      ~safe_pcr(-group, group, data = .))
 
-control.pcas <-
-  control.pcas.try %>%
+control.pcr <-
+  control.pcr.try %>%
   map("result") %>% 
   discard(is.null)
 ```
@@ -149,20 +155,20 @@ control.pcas <-
 How many errors? 
 
 ```{r}
-length(control.pcas.try) - length(control.pcas)
+length(control.pcr.try) - length(control.pcr)
 
 #What was the error?
-control.pcas.try %>% 
+control.pcr.try %>% 
   map("error") %>% 
   unique()
 ```
 
-One failed model due to convergence problems
+Two failed models due to convergence problems
 
 Save em!
 
 ```{r}
-write_rds(control.pcas, here("data", "models", "control-pca.rds"))
+write_rds(control.pcr, here("data", "models", "control-pcr.rds"))
 ```
 
 
@@ -198,25 +204,26 @@ write_rds(control.pls, here("data", "models", "control-pls.rds"))
 ### Needle PCAs
 
 ```{r}
-needle.pcas.try <-
+needle.pcr.try <-
   map(needle,
-      ~safe_opls(select(., -group)))
+      ~safe_pcr(-group, group, data = .))
 
-needle.pcas <-
-  needle.pcas.try %>% 
+needle.pcr <-
+  needle.pcr.try %>% 
   map("result") %>% 
   discard(is.null)
+# skrrrahh(18)
 ```
 
 Any errors?
 
 ```{r}
-length(needle.pcas.try) - length(needle.pcas)
+length(needle.pcr.try) - length(needle.pcr)
 ```
 
 zero failed models 
 ```{r}
-write_rds(needle.pcas, here("data", "models", "needle-pca.rds"))
+write_rds(needle.pcr, here("data", "models", "needle-pcr.rds"))
 ```
 
 ### Needle PLS-DAs
@@ -230,6 +237,7 @@ needle.pls <-
   needle.pls.try %>% 
   map("result") %>% 
   discard(is.null)
+skrrrahh(18)
 ```
 
 Any errors?
@@ -250,50 +258,50 @@ write_rds(needle.pls, here("data", "models", "needle-pls.rds"))
 ### Red Herring PCAs
 
 ```{r}
-herring.pcas.try <-
-  map(red_herring,
-      ~safe_opls(select(., -group)))
-
-herring.pcas <-
-  herring.pcas.try %>% 
-  map("result") %>% 
-  discard(is.null)
+# herring.pcas.try <-
+#   map(red_herring,
+#       ~safe_opls(select(., -group)))
+# 
+# herring.pcas <-
+#   herring.pcas.try %>% 
+#   map("result") %>% 
+#   discard(is.null)
 ```
 
 Any errors?
 
 ```{r}
-length(herring.pcas.try) - length(herring.pcas)
+# length(herring.pcas.try) - length(herring.pcas)
 ```
 
 Zero errors
 ```{r}
-write_rds(herring.pcas, here("data", 'models', 'herring-pca.rds'))
+# write_rds(herring.pcas, here("data", 'models', 'herring-pca.rds'))
 ```
 
 ### Red Herring PLS-DAs
 
 ```{r}
-herring.pls.try <-
-  map(red_herring,
-      ~ safe_opls(select(., -group), .$group, permI = 500))
-
-herring.pls <-
-  herring.pls.try %>% 
-  map("result") %>% 
-  discard(is.null)
+# herring.pls.try <-
+#   map(red_herring,
+#       ~ safe_opls(select(., -group), .$group, permI = 500))
+# 
+# herring.pls <-
+#   herring.pls.try %>% 
+#   map("result") %>% 
+#   discard(is.null)
 ```
 
 Any errors?
 
 ```{r}
-length(herring.pls.try) - length(herring.pls)
+# length(herring.pls.try) - length(herring.pls)
 ```
 
 Zero errors
 
 ```{r}
-write_rds(herring.pls, here('data','models', 'herring-pls.rds'))
+# write_rds(herring.pls, here('data','models', 'herring-pls.rds'))
 ```
 
 # Get Summary Stats
@@ -307,9 +315,15 @@ control.pls %>%
   map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
                 R2 = pluck(., 2, "R2Y(cum)"),
                 pR2 = pluck(., 2, "pR2Y"),
-                pQ2 = pluck(., 2, "pQ2")),
+                pQ2 = pluck(., 2, "pQ2"),
+                RMSEP = pluck(., 2, "RMSEE")),
           .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
+  summarize_if(is.numeric, funs(mean, sd)) %>% 
+  mutate(pcr_RMSEP = control.pcr %>% map_dbl("RMSEP") %>% mean(),
+         pcr_RMSEP_sd = control.pcr %>% map_dbl("RMSEP") %>% sd())
+
+control.pcr %>% 
+  map_dfr("RMSEP", .id = "dataset")
 ```
 
 **Null**
@@ -320,9 +334,12 @@ null.pls %>%
   map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
                 R2 = pluck(., 2, "R2Y(cum)"),
                 pR2 = pluck(., 2, "pR2Y"),
-                pQ2 = pluck(., 2, "pQ2")),
+                pQ2 = pluck(., 2, "pQ2"),
+                RMSEE = pluck(., 2, "RMSEE")),
           .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
+  summarize_if(is.numeric, funs(mean, sd)) %>% 
+    mutate(pcr_RMSEP = null.pcr %>% map_dbl("RMSEP") %>% mean(),
+         pcr_RMSEP_sd = null.pcr %>% map_dbl("RMSEP") %>% sd())
 ```
 
 **Needle-in-a-haystack**
@@ -332,21 +349,24 @@ needle.pls %>%
   map(~get_modelinfo(.)) %>%
   map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
                 R2 = pluck(., 2, "R2Y(cum)"),
-                pQ2 = pluck(., 2, "pQ2")),
+                pQ2 = pluck(., 2, "pQ2"),
+                RMSEE = pluck(., 2, "RMSEE")),
           .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
+  summarize_if(is.numeric, funs(mean, sd)) %>% 
+    mutate(pcr_RMSEP = needle.pcr %>% map_dbl("RMSEP") %>% mean(),
+         pcr_RMSEP_sd = needle.pcr %>% map_dbl("RMSEP") %>% sd())
 ```
 
 **Red Herring**
 
 ```{r}
-herring.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)"),
-                pQ2 = pluck(., 2, "pQ2")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
+# herring.pls %>%
+#   map(~get_modelinfo(.)) %>%
+#   map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
+#                 R2 = pluck(., 2, "R2Y(cum)"),
+#                 pQ2 = pluck(., 2, "pQ2")),
+#           .id = "dataset") %>% 
+#   summarize_if(is.numeric, funs(mean, sd))
 ```
 
 
