--- a/R/2-analyze-simulated-data.Rmd
+++ b/R/2-analyze-simulated-data.Rmd
@@ -23,23 +23,14 @@ For each dataset:
 - Do PCA
 - Do PLS-DA
 - Record how many PLS-DA's fail because even the first component is not significant, but filter out failing models
-- Calculate Cohen's Kappa for each method as outlined in "Confusion Matrix.Rmd"
-- Plot distributions of Cohen's Kappa
-- Possibly do other stuff like:
-    + compare p-values from PCA score based t-tests and PLS-DA permutation tests
-    + calculate distance between centriods in score plots for PCA and PLS-DA for all datasets
     
 
 # Packages and Functions
 
 ```{r message=FALSE, warning=FALSE}
 library(here)
-library(holodeck)
 library(ropls)
-library(psych) #for cohen.kappa()
 library(tidyverse)
-library(colorspace)
-library(cowplot)
 source(here("R","pcr.R"))
 ```
 
@@ -237,7 +228,7 @@ needle.pls <-
   needle.pls.try %>% 
   map("result") %>% 
   discard(is.null)
-skrrrahh(18)
+# skrrrahh(18)
 ```
 
 Any errors?
@@ -251,125 +242,5 @@ zero errors
 ```{r}
 write_rds(needle.pls, here("data", "models", "needle-pls.rds"))
 ```
-
-
-## Red Herring (might not use this one)
-
-### Red Herring PCAs
-
-```{r}
-# herring.pcas.try <-
-#   map(red_herring,
-#       ~safe_opls(select(., -group)))
-# 
-# herring.pcas <-
-#   herring.pcas.try %>% 
-#   map("result") %>% 
-#   discard(is.null)
-```
-
-Any errors?
-
-```{r}
-# length(herring.pcas.try) - length(herring.pcas)
-```
-
-Zero errors
-```{r}
-# write_rds(herring.pcas, here("data", 'models', 'herring-pca.rds'))
-```
-
-### Red Herring PLS-DAs
-
-```{r}
-# herring.pls.try <-
-#   map(red_herring,
-#       ~ safe_opls(select(., -group), .$group, permI = 500))
-# 
-# herring.pls <-
-#   herring.pls.try %>% 
-#   map("result") %>% 
-#   discard(is.null)
-```
-
-Any errors?
-
-```{r}
-# length(herring.pls.try) - length(herring.pls)
-```
-
-Zero errors
-
-```{r}
-# write_rds(herring.pls, here('data','models', 'herring-pls.rds'))
-```
-
-# Get Summary Stats
-## Map R2 and Q2 extractor
-
-**Control**
-
-```{r}
-control.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)"),
-                pR2 = pluck(., 2, "pR2Y"),
-                pQ2 = pluck(., 2, "pQ2"),
-                RMSEP = pluck(., 2, "RMSEE")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd)) %>% 
-  mutate(pcr_RMSEP = control.pcr %>% map_dbl("RMSEP") %>% mean(),
-         pcr_RMSEP_sd = control.pcr %>% map_dbl("RMSEP") %>% sd())
-
-control.pcr %>% 
-  map_dfr("RMSEP", .id = "dataset")
-```
-
-**Null**
-
-```{r}
-null.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)"),
-                pR2 = pluck(., 2, "pR2Y"),
-                pQ2 = pluck(., 2, "pQ2"),
-                RMSEE = pluck(., 2, "RMSEE")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd)) %>% 
-    mutate(pcr_RMSEP = null.pcr %>% map_dbl("RMSEP") %>% mean(),
-         pcr_RMSEP_sd = null.pcr %>% map_dbl("RMSEP") %>% sd())
-```
-
-**Needle-in-a-haystack**
-
-```{r}
-needle.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)"),
-                pQ2 = pluck(., 2, "pQ2"),
-                RMSEE = pluck(., 2, "RMSEE")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd)) %>% 
-    mutate(pcr_RMSEP = needle.pcr %>% map_dbl("RMSEP") %>% mean(),
-         pcr_RMSEP_sd = needle.pcr %>% map_dbl("RMSEP") %>% sd())
-```
-
-**Red Herring**
-
-```{r}
-# herring.pls %>%
-#   map(~get_modelinfo(.)) %>%
-#   map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-#                 R2 = pluck(., 2, "R2Y(cum)"),
-#                 pQ2 = pluck(., 2, "pQ2")),
-#           .id = "dataset") %>% 
-#   summarize_if(is.numeric, funs(mean, sd))
-```
-
-
-
 
 
