--- a/R/3-model-stats.Rmd
+++ b/R/3-model-stats.Rmd
@@ -8,13 +8,14 @@ output: html_notebook
 
 - Make a table using gtable
   - columns = Scenario, statistic, PCA regression, PLS-DA
-  -
+  - rows to add: kappa coef?, number of models, number of significant components (mean ± sd)?
 
 ```{r message=FALSE}
 library(here)
 library(tidyverse)
 library(holodeck) #for get_* functions
 # source(here("R","pcr.R"))
+library(glue)
 ```
 
 # Read in models
@@ -30,92 +31,56 @@ needle.pcr <- read_rds(here('data', 'models', 'needle-pcr.rds'))
 
 
 # Get Summary Stats
-## Map R2 and Q2 extractor
+## Function for getting summary stats
 
-**Control**
-
-```{r}
-control.pls.summary <-
-  control.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2_pls = pluck(., 2, "Q2(cum)"),
-                R2Y_pls = pluck(., 2, "R2Y(cum)"),
-                R2X_pls = pluck(., 2, "R2X(cum)"),
-                pR2_pls = pluck(., 2, "pR2Y"),
-                pQ2_pls = pluck(., 2, "pQ2"),
-                RMSEP_pls = pluck(., 2, "RMSEE")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd))
-
-control.pcr.summary <- 
-  control.pcr %>% 
-  map_dfr(~broom::glance(.$lm), .id = "dataset") %>% 
-  mutate(RMSEP = map_dbl(control.pcr, "RMSEP"),
-         R2X = map_dbl(control.pcr, ~.$pca@summaryDF$`R2X(cum)`)) %>% 
-  select(dataset, R2Y = r.squared, p = p.value, RMSEP, R2X) %>% 
-  summarize_if(is.numeric, funs(mean, sd)) %>%
-  gather() %>% 
-  separate(key, into = c("Statistic", "part")) %>% 
-  spread(key = part, value = value) %>% 
-  mutate(value = glue("{round(mean, 3)} ± {round(sd, 3)}")) %>% 
-  add_column(model = "PCA Regression")
-
-control.pcr.summary
-```
-
-
-
-      
-```{r} 
-control.summary %>% 
-  gather() %>% 
-  separate(key, into = c("statistic", "model", "part")) %>% 
-  spread(key = part, value = value) %>% 
-  mutate(value = glue("{round(mean, 3)} ± {round(sd, 3)}")) %>% 
-  select(-mean, -sd) %>% 
-  spread(key = model, value = value)
-```
-
-**Null**
+This is annoying because of the data structure.  I'm sure there is a more efficient way to do all this.
 
 ```{r}
-null.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)"),
-                pR2 = pluck(., 2, "pR2Y"),
-                pQ2 = pluck(., 2, "pQ2"),
-                RMSEE = pluck(., 2, "RMSEE")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd)) %>% 
-    mutate(pcr_RMSEP = null.pcr %>% map_dbl("RMSEP") %>% mean(),
-         pcr_RMSEP_sd = null.pcr %>% map_dbl("RMSEP") %>% sd())
+pls_pcr_summary <- function(pls, pcr) {
+  pls.summary <-
+    pls %>%
+    map(~get_modelinfo(.)) %>%
+    map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
+                  R2Y = pluck(., 2, "R2Y(cum)"),
+                  R2X = pluck(., 2, "R2X(cum)"),
+                  pR2 = pluck(., 2, "pR2Y"),
+                  pQ2 = pluck(., 2, "pQ2"),
+                  RMSEP = pluck(., 2, "RMSEE")),
+            .id = "dataset") %>% 
+    summarize_if(is.numeric, funs(mean, sd)) %>% 
+    gather() %>% 
+    separate(key, into = c("Statistic", "part")) %>% 
+    spread(key = part, value = value) %>% 
+    mutate(`PLS-DA` = glue("{round(mean, 3)} ± {round(sd, 3)}")) %>% 
+    select(-sd, -mean)
+  
+  pcr.summary <- 
+    pcr %>% 
+    map_dfr(~broom::glance(.$lm), .id = "dataset") %>% 
+    mutate(RMSEP = map_dbl(pcr, "RMSEP"),
+           R2X = map_dbl(pcr, ~.$pca@summaryDF$`R2X(cum)`)) %>% 
+    select(dataset, R2Y = r.squared, p = p.value, RMSEP, R2X) %>% 
+    summarize_if(is.numeric, funs(mean, sd)) %>%
+    gather() %>% 
+    separate(key, into = c("Statistic", "part")) %>% 
+    spread(key = part, value = value) %>% 
+    mutate(`PCA-DA` = glue("{round(mean, 3)} ± {round(sd, 3)}")) %>% 
+    select(-mean, -sd)
+  
+  return(full_join(pls.summary, pcr.summary))
+}
 ```
 
-**Needle-in-a-haystack**
+## Make table and write to .csv
 
 ```{r}
-needle.pls %>%
-  map(~get_modelinfo(.)) %>%
-  map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-                R2 = pluck(., 2, "R2Y(cum)"),
-                pQ2 = pluck(., 2, "pQ2"),
-                RMSEE = pluck(., 2, "RMSEE")),
-          .id = "dataset") %>% 
-  summarize_if(is.numeric, funs(mean, sd)) %>% 
-    mutate(pcr_RMSEP = needle.pcr %>% map_dbl("RMSEP") %>% mean(),
-         pcr_RMSEP_sd = needle.pcr %>% map_dbl("RMSEP") %>% sd())
-```
-
-**Red Herring**
-
-```{r}
-# herring.pls %>%
-#   map(~get_modelinfo(.)) %>%
-#   map_dfr(~list(Q2 = pluck(., 2, "Q2(cum)"),
-#                 R2 = pluck(., 2, "R2Y(cum)"),
-#                 pQ2 = pluck(., 2, "pQ2")),
-#           .id = "dataset") %>% 
-#   summarize_if(is.numeric, funs(mean, sd))
+table1 <-
+  list(control = pls_pcr_summary(control.pls, control.pcr) %>% arrange(Statistic),
+       null = pls_pcr_summary(null.pls, null.pcr) %>% arrange(Statistic),
+       needle = pls_pcr_summary(needle.pls, needle.pcr) %>% arrange(Statistic)
+  ) %>%
+  bind_rows(.id = "Scenario")
+table1
+write_excel_csv(table1, here("figs", "table1.csv"))
 ```
 
